Updated grid from justified center. Removed fixed position to prevent over lap on smaller screens. Updated Projects max-width. Changed display to inline-flex in css skills class.

--- a/styles/PortfolioStyle.css
+++ b/styles/PortfolioStyle.css
@@ -19,10 +19,11 @@ html{
     background-color: rgba(102, 183, 167, 0.25);
     border-radius: 25px;
     padding: 10px;
-    display:inline;
+    display:inline-flex;
     font-family: "Poppins", sans-serif;
     font-size: small;
     color: #66b7a7;
+
 }
 
 section{
